--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,7 @@ documentation
 # misc
 .idea/
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
